--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,14 @@ img {
     border: none;
     margin-bottom: none;
 }
-.widget-curso__label {
+.widget-curso__label,
+.curso__label {
     font-family: var(--fuenteHeding);
     font-weight: 700;
     font-size: 2rem;
 }
-.widget-curso__info {
+.widget-curso__info,
+.curso__info {
     font-weight: 400;
     font-size: 2rem;
 }
@@ -232,4 +234,36 @@ img {
     align-items: center;
     padding: 2rem 0;
 
+}
+
+/* sobre nosotros */
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+        align-items: center;
+    }
+}
+
+
+/* cursos */
+
+.curso {
+    padding: 4rem  0;
+    border-bottom: 1px solid var(--gris);
+
+}
+
+@media (min-width: 768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
+.curso:last-of-type {
+    border: none;
 }
